1.8.0 - ???
  - General changes/additions
    * augtool: add a 'source' command exposing the aug_source API call
    * augtool: dramatically reduce memory consumption when all lenses are
      loaded by more aggressively releasing temporary data structures.  On
      my machine, maximum memory usage of 'augtool -L' drops from roughly
      90MB to about 20MB. This will not change the amount of memory used
      when only specific lenses are used, only the default behavior of
      loading all lenses, i.e., when -A is not passed.
  - API changes
    * add aug_source to find the source file for a particular node
    * reduce memory consumption when AUG_NO_MODL_AUTOLOAD is _not_ passed;
      exact same details as described above for augtool
  - Lens changes/additions
    * Radicale: new lens for config of http://radicale.org/ (James Valleroy)
    * Ssh: also look for files in in /etc/ssh/ssh_config.d (Ian Mortimer)
    * Tmpfiles: parse 'q'/'Q' modes, parse two-character arguments,
                parse three-digit file modes
    * Xml: support external entity declarations in the doctype (Issue #142)

1.7.0 - 2016-11-08
  - General changes/additions
    * allow multiple transforms handling the same file as long as they
      also use the same lens (reported by Rich Jones)
    * fix a use-after-free in recursive lenses when spans are
      enabled (Issue #397)
    * fix an illegal memory access during put that can be triggered by a
      lens of the form 'del ... | l1 . l2' when the put has to jump
      branches in the union (Issue #398)
    * a large number of fixes based on Coverity scanning and running with
      gcc's address sanitizer. None of the issues uncovered would have lead
      to particularly significant leaks (they were all on the order 100-200
      bytes) and often hard to trigger, but we now have proof that at least
      while running tests there are no leaks at all.
      See https://github.com/hercules-team/augeas/pull/405 for details.